Resolves: fdo#41554 ww6 file cannot be opened

it falls into a (apparently) ww8 specific old school macro
parser we use to scrape out some toolbar info and tries
to allocate some nutso numbers which throws and aborts
the import.

Skip importing these in ww6 document, and tweak the code
to be a bit more forgiving in ww8 documents where the
load fails via exceptions

Change-Id: I9bba60db3b95ece54f68d4fa23031f46545697da